--- a/UI/Editor.css
+++ b/UI/Editor.css
@@ -3,6 +3,7 @@
 body, h1, h2, h3, h4, h5, h6, p, ul, ol {
     margin: 0;
     padding: 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
@@ -17,7 +18,7 @@ body {
 }
 
 .container {
-    width: 80%;
+    width: 90%;
     height: 90vh;
     background-color: #1e1e1e;
     border-radius: 10px;
@@ -36,9 +37,10 @@ body {
 }
 
 .header h1 {
-    font-size: 24px;
+    font-size: 2vw;
     color: #fff;
 }
+
 
 .editPanel{
     width: 100%;
@@ -52,6 +54,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
+
 }
 
 .editor textarea {
@@ -72,8 +75,9 @@ body {
     padding: 15px;
     cursor: pointer;
     text-align: center;
-    font-size: 16px;
+    font-size: 1vw;
     transition: background-color 0.3s ease;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .editor .run-button:hover {
@@ -85,9 +89,9 @@ body {
     height: 100%;
     background-color: #fff;
     color: #000;
-    padding: 20px;
-    border-top: 1px solid #444;
-    overflow: auto;
+    padding: 5px;
+    overflow: hidden;
+    
     /* height: calc(50vh - 60px); */
 }
 
@@ -95,7 +99,12 @@ body {
     width: 100%;
     height: 100%;
     border: none;
+    border: 2px dotted rgba(0, 0, 0, 0.099);
     background-color: #fff;
+}
+.output iframe:hover {
+    border: 3px dotted rgba(0, 0, 0, 0.362);
+
 }
 
 .footer {
