--- a/UI/Editor.css
+++ b/UI/Editor.css
@@ -90,6 +90,7 @@ body {
     background-color: #fff;
     color: #000;
     padding: 5px;
+    padding-right: 10px !important;
     overflow: hidden;
     
     /* height: calc(50vh - 60px); */
