--- a/UI/UI_2.0.css
+++ b/UI/UI_2.0.css
@@ -1,79 +1,211 @@
+body{
+    margin: 0px;
+    /* background-color: #34495E; */
+    height: 100vh;
+}
 
-.grid-container {
+.container
+{   
+    height: 100vh;
+    width: 100vw;
     display: grid;
-    grid-template-areas:
-        "header header header"
-        "nav content aside"
-        "footer footer footer";
-    grid-template-columns: [start] 1fr [middle] 3fr [end] 1fr;
+    grid-template-columns:auto  repeat(11,1fr) ;
+    grid-template-rows: max(5vw,100px) auto 100px;
 
-    /* grid-gap:10px; */
-    /* padding: 10px; */
+    grid-template-areas: 
+    "h h h h h h h h h h h h"
+    "s c c c c c c c c c c a"
+    "s c c c c c c c c c c a";
 }
 
-.header {
-    grid-area: header;
+.headerContainer{
+    grid-area: h;
+    
 }
 
-.nav {
-    grid-area: nav;
-    grid-template-columns: auto;
-}
-
-.content {
-    grid-area: content;
-    background-color: #e1e2e1;
+.head{
+    height: 70%;
+    background-color: #ECF0F1;
     display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: subgrid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: 100% ;
+    grid-template-areas: 
+    "name d1 d2 d3 d4 d5 d6 d7 d8  d8  login btn"
+    ;
+    align-items: center;
+    justify-items: center;
 }
 
-.aside {
-    grid-area: aside;
-    background-color: #0d6997;
-}
-
-.footer {
-    grid-area: footer;
-    background-color: #8ca1a5;
-}
-
-.item {
-    background-color: #8ca1a5;
-    /* padding: 20px; */
-    text-align: center;
-    justify-self: center; /* Center item horizontally */
-    align-self: center;   /* Center item vertically */
-}
-
-@media (min-width: 600px) {
-    .grid-container {
-        grid-template-columns: [start] 1fr [middle] 3fr [end] 1fr;
-    }
-}
-
-@media (min-width: 900px) {
-    .grid-container {
-        grid-template-columns: [start] 1fr [middle] 4fr [end] 1fr;
-    }
-}
-
-#wrapi
+.data_1
 {
-    background-color: #2C3E50;
-    padding-left: .5vw;
-    overflow-y: scroll;
-
+    grid-area: d1;
+    padding: .3vw;
+}
+.data_2
+{
+    grid-area: d2;
+    padding: .3vw;
+}
+.data_3
+{
+    grid-area: d3;
+    padding: .3vw;
+}
+.data_4
+{
+    grid-area: d4;
+    padding: .3vw;
+}
+.data_5
+{
+    grid-area: d5;
+    padding: .3vw;
+}
+.data_6
+{
+    grid-area: d6;
+    padding: .3vw;
+}
+.data_7
+{
+    grid-area: d7;
+    padding: .3vw;
+}
+.data_8
+{
+    grid-area: d8;
+    padding: .3vw;
 }
 
-.sidebar
+.head
+{
+    grid-area: head;
+    padding: .3vw;
+}
+.LogIn
+{
+    grid-area: login;
+    padding: .3vw;
+}
+.LiveIt
+{
+    grid-area: btn;
+    padding: .3vw;
+}
+
+.name a{
+    font-size: 3vw;
+    color: #2C3E50;
+    font-family: 'Times New Roman', Times, serif;
+    transition: .3s ease-out;
+    text-decoration: none;
+}
+.name a:hover{
+    color: #CD7F32;
+}
+.LogIn a{
+    font-size: 2vw;
+    color: #2C3E50;
+    font-family: 'Times New Roman', Times, serif;
+    transition: .3s ease-out;
+    text-decoration: none;
+}
+.LogIn a:hover{
+    color: #CD7F32;
+}
+.LiveIt{
+    font-size: 2vw;
+    color: #2C3E50;
+    font-family: 'Times New Roman', Times, serif;
+    transition: .3s ease-out;
+}
+
+.LiveIt button{
+    width: 7vw;
+    height: 3vw;
+    border-radius: 1.5vw ;
+    border: none;
+    background-image: linear-gradient( #2C3E50, #506a83, #2C3E50);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.555);
+    transition: .3s ease-out;
+}
+
+.LiveIt button:hover{
+    scale: 1.05;
+}
+
+.LiveIt button a{
+    font-size: 1.5vw;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    color: #DAF7A6 ;
+}
+
+
+.topics
+{
+    height: 30%;
+    background-color:#2C3E50;
+    z-index: 1000;
+}
+
+.sideBar{
+    grid-area: s;
+    background-color: #2C3E50;
+    overflow-y: scroll;
+}
+
+.wrapper
 {
     display: grid;
     grid-template-columns: 1fr;
+    grid-row: auto;
+    padding-left: .3vw;
+    padding-right: .3vw;
 }
 
-.sidebar a{
-    color: cornsilk;
-    font-size: 150%;
+.wrapper,.login,{
+    font-size: 1.2vw;
+    color: #C0C0C0;
+    font-family: 'Times New Roman', Times, serif;
+    transition: .3s ease-out;
+}
+.wrapper h3{
+    color: #ECF0F1 ;
+    text-align: center;
+    font-size: 1.5vw;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+.wrapper a{
+    font-size: 1.2vw;
+    font-family: 'Times New Roman', Times, serif;
+    color: #ECF0F1;
+}
+.wrapper a:hover{
+    scale: 1.05;
+    color: #DAF7A6;
+}
+.content
+{
+    grid-area: c; 
+    overflow-y: scroll;
+    display: flex;
+    justify-content: center;
     
+    
+}
+
+#content2
+{
+    width: 90%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.addBar{
+    grid-area: a;
+    background-color: inherit;
+    border: 1px solid black;
 }
