--- a/cssFile/data.css
+++ b/cssFile/data.css
@@ -2,6 +2,7 @@ html,body {
     width: 100%;
     height: 100%;
     user-select: none;
+    
   }
 
   *,
@@ -28,7 +29,7 @@ html,body {
   }
 
   h1{
-    color: #596B6D;
+    color: #2C3E50;
     transition: .3s ease-in;
   }
   h1:hover{
@@ -949,10 +950,12 @@ ol.enumerate.lower-alpha {
     visibility: visible;
     word-break: break-word;
     padding: 2.5em;
-    width: max(70vw,430px);
+    /* width: max(70vw,430px); */
     margin: auto;
     box-sizing: content-box;
     overflow-x: hidden;
+    box-shadow: 4px 10px 8px rgba(0, 0, 0, 0.555);
+    border-radius: 20px;
   }
 
   #preview h1,
