--- a/cssFile/data.css
+++ b/cssFile/data.css
@@ -109,7 +109,7 @@ html,body {
     top: -0.5em;
   }
 
-  a {
+  /* a {
     color: #0B93ff;
     text-decoration: none;
     background-color: transparent;
@@ -135,7 +135,7 @@ html,body {
   a[disabled] {
     color: rgba(0, 0, 0, 0.25) cursor: not-allowed;
     pointer-events: none;
-  }
+  } */
 
   pre,
   code,
@@ -956,6 +956,7 @@ ol.enumerate.lower-alpha {
     overflow-x: hidden;
     box-shadow: 4px 10px 8px rgba(0, 0, 0, 0.555);
     border-radius: 20px;
+  
   }
 
   #preview h1,
