--- a/UI/UI_2.0.css
+++ b/UI/UI_2.0.css
@@ -235,7 +235,7 @@ body{
 .wrapper h3{
     color: #ECF0F1 ;
     text-align: center;
-    font-size: 1.5vw;
+    font-size: max(1.5vw,30px);
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 }
@@ -294,8 +294,6 @@ body{
 #sideBar{
     display: none;
 }
-
-
 
 }
 
