--- a/cssFile/data.css
+++ b/cssFile/data.css
@@ -1087,7 +1087,7 @@ ol.enumerate.lower-alpha {
     background: rgba(0, 0, 0, 0.56);
   }
 
-  /* .ClipboardButton {
+  .ClipboardButton {
     padding: 0;
     margin: 0.5rem;
     display: inline-block;
@@ -1098,13 +1098,12 @@ ol.enumerate.lower-alpha {
     border: 1px solid rgba(31, 35, 40, 0.15);
     box-shadow: rgba(31, 35, 40, 0.04) 0 1px 0 0, rgba(255, 255, 255, 0.25) 0 1 0 0 inset;
     position: relative;
+    transition-duration: .3s;
   }
 
   .ClipboardButton:hover {
-    background-color:#F7E7CE;
-    border-color rgba(31, 35, 40, 0.15);
-    transition-duration: .1s;
-  } */
+    background-color:rgb(212, 214, 215);
+  }
 
   .mmd-clipboard-icon {
     fill: currentColor;
@@ -1112,7 +1111,7 @@ ol.enumerate.lower-alpha {
   }
 
   .mmd-clipboard-copy-icon {
-    color: cornsilk;
+    color: gray;
   }
 
   .mmd-clipboard-check-icon {
