--- a/UI/UI_2.0.css
+++ b/UI/UI_2.0.css
@@ -256,8 +256,7 @@ body{
     overflow-y: scroll;
     display: flex;
     justify-content: center;
-    
-    
+    margin: 10px 0px 10px 0px;
 }
 
 #content2
