--- a/UI/Editor.css
+++ b/UI/Editor.css
@@ -44,19 +44,32 @@ body {
 
 .editPanel{
     width: 100%;
-    height: 90%;
+    height: 88%;
     display:flex;
     flex-direction: row;
 }
 .editor {
     width: 50%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 2vw;
+    grid-template-areas: 
+    "c c "
+    "rb lb";
+
 
 }
+#code{
+    grid-area: c;
+}
 
+.run-button{
+    grid-area: rb;
+}
+.live-button{
+    grid-area: lb;
+}
 .editor textarea {
     flex: 1;
     background-color: #1e1e1e;
@@ -68,19 +81,20 @@ body {
     outline: none;
 }
 
-.editor .run-button {
+.editor .run-button, .editor .live-button {
     background-color: #007BFF;
     color: #fff;
     border: none;
-    padding: 15px;
     cursor: pointer;
     text-align: center;
-    font-size: 1vw;
+    font-size: 1.5vw;
+    border-radius: 10px;
     transition: background-color 0.3s ease;
     font-family: 'Times New Roman', Times, serif;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.editor .run-button:hover {
+.editor .run-button:hover , .editor .live-button:hover {
     background-color: #0056b3;
 }
 
