--- a/UI/UI_2.0.css
+++ b/UI/UI_2.0.css
@@ -124,10 +124,12 @@ body{
 .LiveIt button{
     width: 7vw;
     height: 3vw;
-    border-radius: 1.5vw ;
+    border-radius: 1vw ;
     border: none;
     background-image: linear-gradient( #2C3E50, #506a83, #2C3E50);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.555);
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.555); */
+    box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.568) 0px -3px 0px 0px inset;
+
     transition: .3s ease-out;
     
 }
@@ -264,8 +266,13 @@ body{
     width: 90%;
     margin-top: 10px;
     margin-bottom: 10px;
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
 }
 
+#content2.loaded {
+    opacity: 1;
+}
 .addBar{
     grid-area: a;
     background-color: inherit;
