--- a/additionlPage/colour.css
+++ b/additionlPage/colour.css
@@ -21,7 +21,7 @@ body {
   border: 1px solid #ddd;
   border-radius: 1vw;
   background: linear-gradient(145deg, #ffffff, #e6e6e6);
-  box-shadow: 1vw 1vw 2vw #cbcbcb, -1vw -1vw 2vw #ffffff;
+  box-shadow:rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   padding: max(2vw,20px);
   margin: max(1vw,10px);
   display: flex;
@@ -38,7 +38,8 @@ body {
   height: max(5.5vw,80px);
   margin: .3vw;
   border-radius: max(1vw,10px);
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.562);
+  /* box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset; */
+  box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset;
   font-size: max(1vw,15px);
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
@@ -49,6 +50,8 @@ body {
   align-items: center;
   color: white;
 }
+
+
 .box:hover {
   transform: scale(1.2);
 }
