--- a/cssFile/data.css
+++ b/cssFile/data.css
@@ -437,7 +437,6 @@ html,body {
     box-sizing: border-box;
     background: cornsilk;
     user-select:all !important;
-
   }
 
   #preview-content pre code,
@@ -954,7 +953,8 @@ ol.enumerate.lower-alpha {
     margin: 10px auto 10px auto;
     box-sizing: content-box;
     overflow-x: hidden;
-    box-shadow: 4px 10px 8px rgba(0, 0, 0, 0.555);
+    /* box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     border-radius: 20px;
   
   }
@@ -1096,13 +1096,16 @@ ol.enumerate.lower-alpha {
     background: rgb(246, 248, 250);
     border-radius: 6px;
     border: 1px solid rgba(31, 35, 40, 0.15);
-    box-shadow: rgba(31, 35, 40, 0.04) 0 1px 0 0, rgba(255, 255, 255, 0.25) 0 1 0 0 inset;
+    /* box-shadow: rgba(31, 35, 40, 0.04) 0 1px 0 0, rgba(255, 255, 255, 0.25) 0 1 0 0 inset; */
     position: relative;
     transition-duration: .3s;
+    box-shadow:rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
   }
 
   .ClipboardButton:hover {
-    background-color:rgb(212, 214, 215);
+    background: rgb(246, 248, 250);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);
   }
 
   .mmd-clipboard-icon {
