--- a/UI_2.0.css
+++ b/UI_2.0.css
@@ -10,7 +10,7 @@ body{
     width: 100vw;
     display: grid;
     grid-template-columns:auto  repeat(11,1fr) ;
-    grid-template-rows: max(5vw,100px) auto 100px;
+    grid-template-rows: max(5vw,80px) auto 100px;
 
     grid-template-areas: 
     "h h h h h h h h h h h h"
@@ -92,6 +92,8 @@ body{
 {
     grid-area: btn;
     padding: .3vw;
+    width: 100%;
+    height: 100%;
 }
 
 .name a{
@@ -122,8 +124,8 @@ body{
 }
 
 .LiveIt button{
-    width: 7vw;
-    height: 3vw;
+    width: 80%;
+    height: 80%;
     border-radius: 1vw ;
     border: none;
     background-image: linear-gradient( #2C3E50, #506a83, #2C3E50);
@@ -299,6 +301,12 @@ body{
 
 #sideBar{
     display: none;
+}
+.head{
+  grid-template-areas: 
+  "name d1 d2 d3 d4 d5 d6 d7 d8 login btn btn"
+  ;
+
 }
 
 }
