--- a/UI_2.0.css
+++ b/UI_2.0.css
@@ -36,6 +36,10 @@ body{
     justify-items: center;
 }
 
+.name
+{
+  grid-area: name;
+}
 .data_1
 {
     grid-area: d1;
@@ -94,6 +98,13 @@ body{
     padding: .3vw;
     width: 100%;
     height: 100%;
+    align-content: center;
+    justify-items: center;
+    color: #2C3E50;
+    font-family: 'Times New Roman', Times, serif;
+    transition: .3s ease-out;
+
+
 }
 
 .name a{
@@ -116,12 +127,6 @@ body{
 .LogIn a:hover{
     color: #CD7F32;
 }
-.LiveIt{
-    font-size: 2vw;
-    color: #2C3E50;
-    font-family: 'Times New Roman', Times, serif;
-    transition: .3s ease-out;
-}
 
 .LiveIt button{
     width: 80%;
@@ -129,10 +134,9 @@ body{
     border-radius: 1vw ;
     border: none;
     background-image: linear-gradient( #2C3E50, #506a83, #2C3E50);
-    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.555); */
     box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.568) 0px -3px 0px 0px inset;
-
     transition: .3s ease-out;
+    margin: auto;
     
 }
 
@@ -304,7 +308,7 @@ body{
 }
 .head{
   grid-template-areas: 
-  "name d1 d2 d3 d4 d5 d6 d7 d8 login btn btn"
+  "name name d2 d3 d4 d5 d6 d7 d8 login btn btn"
   ;
 
 }
@@ -315,6 +319,9 @@ body{
   
 }
 
+.LiveIt button a{
+  font-size: 100%;
+}
 }
 
 @media(min-width:901px)
