--- a/UI_2.0.css
+++ b/UI_2.0.css
@@ -256,6 +256,8 @@ body{
 }
 .wrapper a:hover{
     scale: 1.05;
+    transform: translateY(3px);
+    transform: translateX(3px);
     color: #DAF7A6;
 }
 .content
@@ -1342,11 +1344,9 @@ ol.enumerate.lower-alpha {
     visibility: visible;
     word-break: break-word;
     padding: 2.5em;
-    /* width: max(70vw,430px); */
     margin: 1vw auto 5vw auto;
     box-sizing: content-box;
     overflow-x: hidden;
-    /* box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     border-radius: 20px;
   
@@ -1580,15 +1580,5 @@ ol.enumerate.lower-alpha {
     border-radius: 6px;
     opacity: 0;
   }
-
-  /* this portion is for slider  */
-
-
-
-  /* slider */
-
-
-
-
 
 
